# easylib-example-project

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: helloworld.h
src/: helloworld.cc
